--- a/css/timer.css
+++ b/css/timer.css
@@ -47,7 +47,7 @@ input.digit4 { width: 4.5em; }
 	border-radius: 0.4em;
 }
 
-#close {
+#setting\.close {
 	position: absolute; top: 0; right: 0;
 }
 
